--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,15 @@
+lzjody 0.4 (2023-08-09)
+
+- Seq16/32 fixed; they were broken due to an endianness issue
+- Seq8 now compresses sequences of any increment/decrement (not just +1)
+- Utility now shows help text if passed -h/-v
+- Add internal options to disable specific compressors
+
+lzjody 0.3 (2023-08-06)
+
+- Rewrite utility's threaded mode so it actually works
+- lzjody_compress now accepts arbitrarily large (over 4 KiB) data chunks
+
 lzjody 0.2 (2023-07-03)
 
 - Threaded mode added (build with 'make THREADED=1')
